CodeStyle and class comments (Samu)