@@ -5,8 +5,12 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 public class DirectoryUserGroups {
+  /*
+  * Class that creates and save the different UserGroups that exist in the system*/
   private static final ArrayList<UserGroup> userGroups = new ArrayList<>();
 
   public static void makeUserGroups() {
@@ -17,26 +21,28 @@ public class DirectoryUserGroups {
     //Check all areas are initialized
     System.out.println("Is building in DirectoryAreas?");
     Area building = DirectoryAreas.findAreaById("building");
+    /*
     System.out.println("Is basement in DirectoryAreas?");
     Area basement = DirectoryAreas.findAreaById("basement");
     System.out.println("Is parking in DirectoryAreas?");
     Area parking = DirectoryAreas.findAreaById("parking");
+     */
     System.out.println("Is ground_floor in DirectoryAreas?");
     Area ground_floor = DirectoryAreas.findAreaById("ground_floor");
-    System.out.println("Is hall in DirectoryAreas?");
-    Area hall = DirectoryAreas.findAreaById("hall");
-    System.out.println("Is room1 in DirectoryAreas?");
-    Area room1 = DirectoryAreas.findAreaById("room1");
-    System.out.println("Is room2 in DirectoryAreas?");
-    Area room2 = DirectoryAreas.findAreaById("room2");
+    //System.out.println("Is hall in DirectoryAreas?");
+    //Area hall = DirectoryAreas.findAreaById("hall");
+    //System.out.println("Is room1 in DirectoryAreas?");
+    //Area room1 = DirectoryAreas.findAreaById("room1");
+    //System.out.println("Is room2 in DirectoryAreas?");
+    //Area room2 = DirectoryAreas.findAreaById("room2");
     System.out.println("Is floor1 in DirectoryAreas?");
     Area floor1 = DirectoryAreas.findAreaById("floor1");
-    System.out.println("Is room3 in DirectoryAreas?");
-    Area room3 = DirectoryAreas.findAreaById("room3");
-    System.out.println("Is corridor in DirectoryAreas?");
-    Area corridor = DirectoryAreas.findAreaById("corridor");
-    System.out.println("Is IT in DirectoryAreas?");
-    Area IT = DirectoryAreas.findAreaById("IT");
+    //System.out.println("Is room3 in DirectoryAreas?");
+    //Area room3 = DirectoryAreas.findAreaById("room3");
+    //System.out.println("Is corridor in DirectoryAreas?");
+    //Area corridor = DirectoryAreas.findAreaById("corridor");
+    //System.out.println("Is IT in DirectoryAreas?");
+    //Area IT = DirectoryAreas.findAreaById("IT");
     System.out.println("Is exterior in DirectoryAreas?");
     Area exterior = DirectoryAreas.findAreaById("exterior");
     System.out.println("Is stairs in DirectoryAreas?");
@@ -44,8 +50,8 @@ public class DirectoryUserGroups {
 
     //Create userGroupAreas
     ArrayList<Area> employeesAreas = new ArrayList<>(Arrays.asList(ground_floor, floor1, exterior, stairs));
-    ArrayList<Area> manegersAreas = new ArrayList<>(Arrays.asList(building));
-    ArrayList<Area> adminAreas = new ArrayList<>(Arrays.asList(building));
+    ArrayList<Area> managersAreas = new ArrayList<>(List.of(building));
+    ArrayList<Area> adminAreas = new ArrayList<>(List.of(building));
 
     //Create Users.
     //User constructor assigns the User to the UserGroup passed by parameter
@@ -81,14 +87,14 @@ public class DirectoryUserGroups {
     //Initialize
     //Create userGroupUsers
     ArrayList<User> employeesUsers = new ArrayList<>(Arrays.asList(Ernest, Eulalia));
-    ArrayList<User> manegersUsers = new ArrayList<>(Arrays.asList(Manel, Marta));
-    ArrayList<User> adminUsers = new ArrayList<>(Arrays.asList(Ana));
+    ArrayList<User> managersUsers = new ArrayList<>(Arrays.asList(Manel, Marta));
+    ArrayList<User> adminUsers = new ArrayList<>(List.of(Ana));
 
     //UserGroup actions creation
     ArrayList<String> employeesActions = new ArrayList<>(Arrays.asList(Actions.UNLOCK_SHORTLY, Actions.OPEN, Actions.CLOSE));
     /*NOTE (implementation suggestion) --> Added open and close actions to employees as the teacher encourage to
     implement it after Fita 1 session. In order to make a more realistic ACS.*/
-    ArrayList<String> manegersActions = new ArrayList<>(Arrays.asList(Actions.LOCK, Actions.UNLOCK, Actions.UNLOCK_SHORTLY, Actions.OPEN, Actions.CLOSE));
+    ArrayList<String> managersActions = new ArrayList<>(Arrays.asList(Actions.LOCK, Actions.UNLOCK, Actions.UNLOCK_SHORTLY, Actions.OPEN, Actions.CLOSE));
     ArrayList<String> adminActions = new ArrayList<>(Arrays.asList(Actions.LOCK, Actions.UNLOCK, Actions.UNLOCK_SHORTLY, Actions.OPEN, Actions.CLOSE));
 
     //UserGroup Schedule's creation
@@ -101,7 +107,7 @@ public class DirectoryUserGroups {
     LocalTime horaInici_employees = LocalTime.of(9, 0);
     LocalTime horaFi_employees = LocalTime.of(17, 0);
 
-    //manegers
+    //managers
     LocalDate dataInici_manegers = LocalDate.of(2023, 9, 1);
     LocalDate dataFi_manegers = LocalDate.of(2024, 3, 1);
     ArrayList<DayOfWeek> workDays_manegers = new ArrayList<>(Arrays.asList(DayOfWeek.MONDAY, DayOfWeek.TUESDAY, DayOfWeek.WEDNESDAY, DayOfWeek.THURSDAY, DayOfWeek.FRIDAY, DayOfWeek.SATURDAY));
@@ -121,7 +127,7 @@ public class DirectoryUserGroups {
     Schedule adminSchedule = new Schedule(dataInici_admin, dataFi_admin, workDays_admin, horaInici_admin, horaFi_admin);
     //Create UserGroups
     UserGroup employees = new UserGroup("employees", employeesUsers, employeesAreas, employeesActions, employeesSchedule);
-    UserGroup manegers = new UserGroup("manegers", manegersUsers, manegersAreas, manegersActions, manegersSchedule);
+    UserGroup manegers = new UserGroup("manegers", managersUsers, managersAreas, managersActions, manegersSchedule);
     UserGroup admin = new UserGroup("admin", adminUsers, adminAreas, adminActions, adminSchedule);
 
     //UserGroups assignment to the private attribute
